--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,4 +1,4 @@
-/* .container {
+.container {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
@@ -17,6 +17,3 @@
 .destop-menu .options p {
     margin-left: 12px;
 }
- */
-
- 
