--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,16 +4,51 @@
     margin: 0 auto;
 }
 
-.destop-menu {
+.header-menu {
     display: flex;
     justify-content: space-between;
     margin: 12px 0;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 16px;
+    font-weight: 600;
 }
 
-.destop-menu .options {
+.header-menu .main-menu {
     display: flex;
 }
 
-.destop-menu .options p {
+.header-menu .main-menu a {
     margin-left: 12px;
+    text-decoration: none;
+}
+
+.main-content {
+    margin-top: 100px;
+    margin-left: 100px;
+    width: 600px;
+    /* padding: 20px; */
+}
+
+.main-content h1 {
+    font-size: 50px;
+    font-weight: 600;
+    margin-bottom: 0;
+}
+
+.main-content h2 {
+    font-family: 'Courier New', Courier, monospace;
+    margin-bottom: 0;
+}
+
+.main-content p {
+    width: 600px;
+    text-align: justify;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+img {
+    width: 25%;
+    height: auto;
+    float: right;
+    padding-right: 100px;
 }
